--- a/Cargo.toml
+++ b/Cargo.toml
@@ -29,3 +29,12 @@ tracing = "0.1"
 tracing-subscriber = { version = "0.3", features = ["env-filter"] }
 tower-http = { version = "0.5.2", features = ["full"] }
 image = "0.25.2"
+
+# Для работы с CLIP
+ndarray = "0.15.6" # используется более стааря версия для совместимости с ort
+toml = "0.8.8"
+tokenizers = {version = "0.19.1", features = ["hf-hub", "http"] } 
+ort = {version = "1.16.3", features = ["load-dynamic"]}
+itertools = "0.13.0"
+num_cpus = "1.16.0"
+rayon = "1.10.0"
