--- a/Cargo.toml
+++ b/Cargo.toml
@@ -43,3 +43,5 @@ rayon = "1.10.0"
 # PgVector
 pgvector = { version = "0.4", features = ["diesel", "postgres"] }
 postgres = "0.19"
+env_logger = "0.11.5"
+log = "0.4.22"
