--- a/diesel.toml
+++ b/diesel.toml
@@ -4,7 +4,7 @@
 [print_schema]
 file = "src/schema.rs"
 custom_type_derives = ["diesel::query_builder::QueryId", "Clone"]
-import_types = ["diesel::sql_types::*", "pgvector::sql_types::Vector"]
+import_types = ["diesel::sql_types::*", "pgvector::sql_types::*"]
 generate_missing_sql_type_definitions = false
 
 [migrations_directory]
