--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,6 +27,7 @@ reqwest = { version = "0.12.9", features = ["blocking", "multipart", "stream"] }
 env_logger = "0.11.5"
 log = "0.4.22"
 thiserror = "1.0.66"
+anyhow = "1.0.93"
 
 # Для шаблонизатора
 tower-http = { version = "0.5.2", features = ["full"] }
