--- a/components/backend/Cargo.toml
+++ b/components/backend/Cargo.toml
@@ -1,9 +1,7 @@
 [package]
-name = "recognition"
+name = "backend"
 version = "0.1.0"
 edition = "2021"
-
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
 axum = { version = "0.7.5", features = ["macros", "multipart"] }
